# gb-rs

./: .gitmodules  Cargo.toml  bacon.toml  shell.nix
src/: cpu.rs  disassembler.rs  gpu.rs  joypad.rs  main.rs  timer.rs
src/cpu/: instruction.rs  memorybus.rs  registers.rs
src/disassembler/: instruction.rs
src/gpu/: tile.rs
