[package]
name = "gb-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.35", features = ["derive"] }
enumflags2 = "0.7.11"
jane-eyre = "0.3.0"
minifb = { version = "0.28.0", default-features = false, features = [
  "dlopen",
  "wayland",
] }
nom = "8.0.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
parse-display = "0.10.0"
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# unwrap_used = "deny"
# missing_errors_doc = "allow"
# missing_panics_doc = "allow"
# too_many_lines = "warn"
# future_not_send = "warn"
